--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -9,6 +12,14 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+}
+
+.right-links ul,
+.left-links ul {
+  display: flex;
+  gap: 5px;
+  margin: 0;
+  padding: 0;
 }
 
 ul {
