--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -7,9 +7,40 @@ img {
   height: 100px;
 }
 
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.information {
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+}
+
+.information div {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.information .text {
+  text-align: center;
+}
+
+.information > * {
+  flex: 0 1 200px;
 }
 
 /* do not edit this footer */
@@ -24,3 +55,4 @@ img {
   justify-content: center;
   background: #eee;
 }
+
