--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -41,8 +41,44 @@ html {
 }
 
 .article p {
-  font-size: 18px;
+  font-size: 0.95rem;
   font-family: sans-serif;
   color: white;
   text-align: left;
 }
+
+
+/*------------------ Grid Layout -------------------*/
+
+.container {
+  display: grid;
+  grid-template-columns: 330px 990px;
+  grid-template-rows: 70px 70px 350px 70px;
+  gap: 15px;
+}
+
+.header {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+.sidebar {
+  grid-column: 1 / 2;
+  grid-row: 2 / span 2;
+}
+
+.nav {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.article {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+.footer {
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
+}
+
