--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
@@ -88,4 +89,73 @@
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+/*------ Grid Layout ----------- */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+
+  gap: 4px;
+}
+
+.header {
+  grid-column: 1 / -1;
+  grid-row: 1;
+
+  display: flex;
+  align-items: baseline;
+
+  & .menu {
+    margin-left: auto;
+    width: 70%;
+  }
+}
+
+.header .menu > ul {
+  list-style-type: none;
+
+  display: grid;
+  grid-template-columns: repeat(4, 22%);
+  justify-content: right;
+  align-items: baseline;
+  gap: 10px;
+}
+
+.sidebar {
+  grid-column: 1;
+  grid-row: 2 / 4;
+
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 50px;  
+}
+
+.sidebar > div {
+  display: grid;
+  place-content: center;
+}
+
+.nav > ul{
+  list-style-type: none;
+  width: 100%;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
+  gap: 15px;
+}
+
+.article > div.card {
+  height: 200px;
+}
+
+.footer {
+  grid-column: 1 / -1;
+  grid-row: 4;
 }
